Fix Footer Centering on Mobile

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -105,3 +105,9 @@ code
 .card {
   min-height: 150px !important;
 }
+
+/* Centers Footer on Mobile */
+.footer__item {
+  display: flex;
+  justify-content: center;
+}
